--- a/packages/components/components/elvis-tabs/src/react/style.scss
+++ b/packages/components/components/elvis-tabs/src/react/style.scss
@@ -7,7 +7,6 @@ $hover-blue: #0064fa;
 $icon-btn-width: 24px;
 $tabs-height: 44px;
 
-
 %underline {
   content: '';
   position: absolute;
@@ -47,9 +46,6 @@ $tabs-height: 44px;
     user-select: none;
 
     .ewc-tabs__icon {
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
       display: inline-block;
       position: absolute;
       top: 11px;
@@ -77,9 +73,6 @@ $tabs-height: 44px;
 
     &.ewc-tabs__arrow--hide {
       visibility: hidden;
-      .ewc-tabs__icon {
-        visibility: hidden;
-      }
     }
     &.ewc-tabs__arrow--remove {
       display: none;
@@ -105,12 +98,18 @@ $tabs-height: 44px;
 
     &.left-arrow-fade {
       -webkit-mask: linear-gradient(to right, $transparent-left-fade, $black-fade);
-      mask: linear-gradient(to right,  $transparent-left-fade, $black-fade);
+      mask: linear-gradient(to right, $transparent-left-fade, $black-fade);
     }
-    
+
     &.both-arrows-fade {
-      -webkit-mask: linear-gradient(to right,  $transparent-left-fade, $black-fade, black 90%, transparent 100%);
-      mask: linear-gradient(to right,  $transparent-left-fade, $black-fade, black 90%, transparent 100%);
+      -webkit-mask: linear-gradient(
+        to right,
+        $transparent-left-fade,
+        $black-fade,
+        black 90%,
+        transparent 100%
+      );
+      mask: linear-gradient(to right, $transparent-left-fade, $black-fade, black 90%, transparent 100%);
     }
 
     &.ewc-tabs--scrolling {
