--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6849,98 +6849,104 @@ input:focus {
 }
 .e-toggle {
   position: relative;
-  display: inline-block;
-  height: 16px;
-  width: 32px;
-  background-color: #262626;
-  border-radius: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   cursor: pointer;
-  box-sizing: border-box;
+  font-family: "Red Hat Text", Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
 }
-.e-toggle:after {
+.e-toggle::after {
   content: "";
-  padding: 20px;
   position: absolute;
   left: -4px;
-  top: -12px;
-  border-radius: 50%;
+  top: -4px;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
 }
-.e-toggle input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.e-toggle__input {
+  position: relative;
+  width: 32px;
+  height: 16px;
+  margin: 0 0 0 8px;
+  outline: none;
+  cursor: pointer;
 }
-.e-toggle__slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: 0.15s;
-  border-radius: 50px;
-}
-.e-toggle__slider::before {
-  position: absolute;
+.e-toggle__input::before {
   content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 16px;
+  width: 32px;
+  background: #000;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.e-toggle__input::after {
+  content: "";
+  position: absolute;
+  left: calc((16px - 10px) / 2);
+  top: calc((16px - 10px) / 2);
   height: 10px;
   width: 10px;
-  left: calc((16px - 10px) / 2);
-  bottom: calc((16px - 10px) / 2);
-  background-color: #fff;
-  transition: 0.1s;
+  background: #fff;
   border-radius: 50%;
+  transition: 0.1s;
+  cursor: pointer;
 }
-.e-toggle input:checked + .e-toggle__slider {
-  background-color: #262626;
-}
-.e-toggle input:checked + .e-toggle__slider::before {
-  background-color: #29d305;
+.e-toggle.e-toggle---checked .e-toggle__input::after,
+.e-toggle input:checked.e-toggle__input::after {
+  background: #29d305;
   -o-transform: translateX(16px);
   -ms-transform: translateX(16px);
   -webkit-transform: translateX(16px);
   transform: translateX(16px);
 }
-.e-toggle.e-toggle---focus input + .e-toggle__slider {
+.e-toggle.e-toggle---focus input.e-toggle__input {
   outline: 2px solid #0064fa !important;
   outline-offset: 2px;
 }
-.e-toggle input:focus + .e-toggle__slider {
+.e-toggle input:focus.e-toggle__input {
   outline: 2px solid #0064fa;
   outline-offset: 2px;
 }
+.e-toggle.e-toggle---disabled.e-toggle__input::before,
+.e-toggle input:disabled.e-toggle__input::before {
+  background-color: #bdbdbd;
+  cursor: not-allowed;
+}
+.e-toggle.e-toggle---disabled.e-toggle__input::after,
+.e-toggle input:disabled.e-toggle__input::after {
+  background-color: #e9e9e9;
+  cursor: not-allowed;
+}
 .e-toggle.e-toggle--inverted {
-  border: 1px solid #fff;
-  box-sizing: content-box;
+  color: #fff;
+}
+.e-toggle.e-toggle--inverted .e-toggle__input::before {
   height: 14px;
   width: 30px;
+  border: 1px solid #fff;
+  box-sizing: content-box;
 }
-.e-toggle.e-toggle--inverted .e-toggle__slider::before {
-  left: calc((14px - 10px) / 2);
-  bottom: calc((14px - 10px) / 2);
+.e-toggle.e-toggle--inverted .e-toggle__input::after {
+  left: calc((14px - 10px + 2px) / 2);
 }
-.e-toggle.e-toggle--inverted.e-toggle---disabled, .e-toggle.e-toggle--inverted:disabled {
+.e-toggle.e-toggle--inverted.e-toggle---disabled.e-toggle__input::before,
+.e-toggle.e-toggle--inverted input:disabled.e-toggle__input::before {
   background-color: #262626;
   border: 1px solid #676767;
 }
-.e-toggle.e-toggle--inverted.e-toggle---disabled .e-toggle__slider::before,
-.e-toggle.e-toggle--inverted.e-toggle---disabled input:checked + .e-toggle__slider::before, .e-toggle.e-toggle--inverted:disabled .e-toggle__slider::before,
-.e-toggle.e-toggle--inverted:disabled input:checked + .e-toggle__slider::before {
+.e-toggle.e-toggle--inverted.e-toggle---disabled.e-toggle__input::after,
+.e-toggle.e-toggle--inverted input:disabled.e-toggle__input::after {
   background-color: #676767;
-}
-.e-toggle.e-toggle--inverted.e-toggle---disabled input:checked + .e-toggle__slider, .e-toggle.e-toggle--inverted:disabled input:checked + .e-toggle__slider {
-  background-color: #262626;
-}
-.e-toggle.e-toggle---disabled, .e-toggle:disabled {
-  cursor: not-allowed;
-  background-color: #bdbdbd;
-}
-.e-toggle.e-toggle---disabled .e-toggle__slider::before,
-.e-toggle.e-toggle---disabled input:checked + .e-toggle__slider::before, .e-toggle:disabled .e-toggle__slider::before,
-.e-toggle:disabled input:checked + .e-toggle__slider::before {
-  background-color: #e9e9e9;
-}
-.e-toggle.e-toggle---disabled input:checked + .e-toggle__slider, .e-toggle:disabled input:checked + .e-toggle__slider {
-  background-color: #bdbdbd;
 }
 
 .e-checkbox {
