--- a/packages/web/src/app/doc-pages/other-pages/logo-doc/logo-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/logo-doc/logo-doc.component.html
@@ -28,15 +28,14 @@
       <div class="asset-container" [ngClass]="{ 'e-bg-grey': isInverted }">
         <div class="e-text-right">
           <div class="dark-mode-toggle">
-            <span>Inverted</span>
-            <label class="e-toggle" [ngClass]="{ 'e-toggle--inverted': isInverted }">
+            <label class="e-toggle" role="switch" [ngClass]="{ 'e-toggle--inverted': isInverted }">
+              Inverted
               <input
                 class="e-toggle__input"
                 type="checkbox"
-                (click)="toggleInverted('isInverted')"
                 [checked]="isInverted"
+                (change)="toggleInverted('isInverted')"
               />
-              <span class="e-toggle__slider"></span>
             </label>
           </div>
         </div>
@@ -68,15 +67,14 @@
       <div class="asset-container e-mt-40" [ngClass]="{ 'e-bg-grey': isInverted2 }">
         <div class="e-text-right">
           <div class="dark-mode-toggle">
-            <span>Inverted</span>
-            <label class="e-toggle" [ngClass]="{ 'e-toggle--inverted': isInverted2 }">
+            <label class="e-toggle" role="switch" [ngClass]="{ 'e-toggle--inverted': isInverted2 }">
+              Inverted
               <input
                 class="e-toggle__input"
                 type="checkbox"
-                (click)="toggleInverted('isInverted2')"
                 [checked]="isInverted2"
+                (change)="toggleInverted('isInverted2')"
               />
-              <span class="e-toggle__slider"></span>
             </label>
           </div>
         </div>
@@ -108,15 +106,14 @@
       <div class="asset-container e-mt-40" [ngClass]="{ 'e-bg-grey': isInverted3 }">
         <div class="e-text-right">
           <div class="dark-mode-toggle">
-            <span>Inverted</span>
-            <label class="e-toggle" [ngClass]="{ 'e-toggle--inverted': isInverted3 }">
+            <label class="e-toggle" role="switch" [ngClass]="{ 'e-toggle--inverted': isInverted3 }">
+              Inverted
               <input
                 class="e-toggle__input"
                 type="checkbox"
-                (click)="toggleInverted('isInverted3')"
                 [checked]="isInverted3"
+                (change)="toggleInverted('isInverted3')"
               />
-              <span class="e-toggle__slider"></span>
             </label>
           </div>
         </div>
@@ -148,15 +145,14 @@
       <div class="asset-container e-mt-40" [ngClass]="{ 'e-bg-grey': isInverted4 }">
         <div class="e-text-right">
           <div class="dark-mode-toggle">
-            <span>Inverted</span>
-            <label class="e-toggle" [ngClass]="{ 'e-toggle--inverted': isInverted4 }">
+            <label class="e-toggle" role="switch" [ngClass]="{ 'e-toggle--inverted': isInverted4 }">
+              Inverted
               <input
                 class="e-toggle__input"
                 type="checkbox"
-                (click)="toggleInverted('isInverted4')"
                 [checked]="isInverted4"
+                (change)="toggleInverted('isInverted4')"
               />
-              <span class="e-toggle__slider"></span>
             </label>
           </div>
         </div>
@@ -191,15 +187,14 @@
           <div class="asset-container fav" [ngClass]="{ 'e-bg-grey': isInvertedFav }">
             <div class="e-text-right">
               <div class="dark-mode-toggle">
-                <span>Inverted</span>
-                <label class="e-toggle" [ngClass]="{ 'e-toggle--inverted': isInvertedFav }">
+                <label class="e-toggle" role="switch" [ngClass]="{ 'e-toggle--inverted': isInvertedFav }">
+                  Inverted
                   <input
                     class="e-toggle__input"
                     type="checkbox"
-                    (click)="toggleInverted('isInvertedFav')"
                     [checked]="isInvertedFav"
+                    (change)="toggleInverted('isInvertedFav')"
                   />
-                  <span class="e-toggle__slider"></span>
                 </label>
               </div>
             </div>
