--- a/packages/elvis/percy/components/toggle.html
+++ b/packages/elvis/percy/components/toggle.html
@@ -9,37 +9,37 @@
   <body>
     <div class="e-title-sm e-mt-16">Toggle</div>
     <div class="e-title-xs e-my-16">States</div>
-    <div class="e-toggle" role="switch">
-      <label class="e-toggle__label" for="toggle-2">Off</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-2" />
-    </div>
-    <div class="e-toggle e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-3">On</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-3" checked />
-    </div>
-    <div class="e-toggle e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-4">Disabled off</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-4" disabled />
-    </div>
-    <div class="e-toggle e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-5">Disabled on</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-5" checked disabled />
-    </div>
-    <div class="e-toggle e-toggle--inverted" role="switch">
-      <label class="e-toggle__label" for="toggle-2">Off</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-2" />
-    </div>
-    <div class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-3">On</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-3" checked />
-    </div>
-    <div class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-4">Disabled off</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-4" disabled />
-    </div>
-    <div class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      <label class="e-toggle__label" for="toggle-5">Disabled on</label>
-      <input class="e-toggle__input" type="checkbox" id="toggle-5" checked disabled />
-    </div>
+    <label class="e-toggle" role="switch">
+      Off
+      <input class="e-toggle__input" type="checkbox" />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      On
+      <input class="e-toggle__input" type="checkbox" checked />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      Disabled off
+      <input class="e-toggle__input" type="checkbox" disabled />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      Disabled on
+      <input class="e-toggle__input" type="checkbox" checked disabled />
+    </label>
+    <label class="e-toggle e-toggle--inverted" role="switch">
+      Off
+      <input class="e-toggle__input" type="checkbox" />
+    </label>
+    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      On
+      <input class="e-toggle__input" type="checkbox" checked />
+    </label>
+    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      Disabled off
+      <input class="e-toggle__input" type="checkbox" disabled />
+    </label>
+    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      Disabled on
+      <input class="e-toggle__input" type="checkbox" checked disabled />
+    </label>
   </body>
 </html>
