--- a/packages/elvis/percy/components/segmented-controls.html
+++ b/packages/elvis/percy/components/segmented-controls.html
@@ -63,5 +63,17 @@
         <span class="e-segmented-controls__title">Option 2</span>
       </label>
     </div>
+
+    <div class="e-title-xs e-my-16">Large</div>
+    <div class="e-segmented-controls e-segmented-controls--lg">
+      <input type="radio" name="sc-1-1-lg" id="sc-1-1-lg" checked />
+      <input type="radio" name="sc-1-1-lg" id="sc-1-2-lg" />
+      <label for="sc-1-1-lg" data-value="Option 1">
+        <span class="e-segmented-controls__title">Option 1</span>
+      </label>
+      <label for="sc-1-2-lg" data-value="Option 2">
+        <span class="e-segmented-controls__title">Option 2</span>
+      </label>
+    </div>
   </body>
 </html>
