--- a/packages/elvis/percy/components/toggle.html
+++ b/packages/elvis/percy/components/toggle.html
@@ -25,21 +25,23 @@
       Disabled on
       <input class="e-toggle__input" type="checkbox" checked disabled />
     </label>
-    <label class="e-toggle e-toggle--inverted" role="switch">
-      Off
-      <input class="e-toggle__input" type="checkbox" />
-    </label>
-    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      On
-      <input class="e-toggle__input" type="checkbox" checked />
-    </label>
-    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      Disabled off
-      <input class="e-toggle__input" type="checkbox" disabled />
-    </label>
-    <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
-      Disabled on
-      <input class="e-toggle__input" type="checkbox" checked disabled />
-    </label>
+    <div class="e-bg-grey">
+      <label class="e-toggle e-toggle--inverted" role="switch">
+        Off
+        <input class="e-toggle__input" type="checkbox" />
+      </label>
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        On
+        <input class="e-toggle__input" type="checkbox" checked />
+      </label>
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        Disabled off
+        <input class="e-toggle__input" type="checkbox" disabled />
+      </label>
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        Disabled on
+        <input class="e-toggle__input" type="checkbox" checked disabled />
+      </label>
+    </div>
   </body>
 </html>
