add hasOptionalText prop to datepicker

--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -540,3 +540,8 @@ $datepicker-max-width: 448px;
     transition: none;
   }
 }
+
+.e-form-field__label--optional::after {
+  content: ' (valgfri)';
+  font-weight: 400;
+}
