--- a/packages/elvis/src/components/form/segmented-controls.scss
+++ b/packages/elvis/src/components/form/segmented-controls.scss
@@ -1,5 +1,4 @@
 @use '../../variables/colors';
-@use '../../variables/typography';
 @use '../../utilities/outline';
 @use '../../utilities/helpers';
 
@@ -101,7 +100,11 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
       align-items: center;
       height: 100%;
 
-      @include typography.typography('text-sm');
+      font-family: 'Red Hat Display', Verdana, sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 22px;
     }
 
     &:before,
@@ -158,11 +161,7 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
       height: $segmented-controls-height-lg;
 
       .e-segmented-controls__title {
-        font-family: 'Red Hat Text', Verdana, sans-serif;
-        font-style: normal;
-        font-weight: 400;
         font-size: 16px;
-        line-height: 145%;
       }
     }
   }
@@ -170,16 +169,7 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
   &.e-segmented-controls--sm {
     > label {
       height: $segmented-controls-height-sm;
-
-      .e-segmented-controls__title {
-        font-family: 'Red Hat Display', Verdana, sans-serif;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 22px;
-        letter-spacing: 0px;
-        text-align: center;
-      }
+      width: 100%;
     }
   }
 }
