--- a/packages/elvis/src/components/label.scss
+++ b/packages/elvis/src/components/label.scss
@@ -42,7 +42,7 @@ $label-font-size: 11px;
   color: colors.color('font-color');
   white-space: nowrap;
 
-  @each $label, $map in colors.$just-colors {
+  @each $label, $map in colors.$label-colors {
     $color: colors.color($label);
     $labels: ($label);
 
