--- a/packages/components/frameworks/react-ssr/src/App.scss
+++ b/packages/components/frameworks/react-ssr/src/App.scss
@@ -1,6 +1,37 @@
 .App {
   max-width: 700px;
   margin: 0 auto;
-  padding: 20px;
   font-family: 'Red Hat Text';
+}
+
+.components-examples {
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+}
+.example-wrapper {
+  border-top: 1px solid #29d305;
+  padding: 32px 32px 72px;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Red Hat Display';
+  margin: 40px 0px 48px;
+}
+h3 {
+  font-family: 'Red Hat Display';
+  font-size: 22px;
+  margin-bottom: 32px;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+li {
+  display: inline-block;
+  margin: 0 10px;
+}
+a {
+  color: #42b983;
 }
