--- a/packages/elvis/src/components/label.scss
+++ b/packages/elvis/src/components/label.scss
@@ -6,6 +6,7 @@
 $label-padding: 4px 8px;
 $label-radius: 4px;
 $label-font-size: 11px;
+$label-colors: map-merge(colors.$just-colors, colors.$primary-colors);
 
 %status-content {
   display: inline-flex;
@@ -42,7 +43,7 @@ $label-font-size: 11px;
   color: colors.color('font-color');
   white-space: nowrap;
 
-  @each $label, $map in colors.$label-colors {
+  @each $label, $map in $label-colors {
     $color: colors.color($label);
     $labels: ($label);
 
