--- a/packages/elvis/src/variables/colors.scss
+++ b/packages/elvis/src/variables/colors.scss
@@ -1,6 +1,6 @@
-@use "sass:list";
-@use "sass:map";
-@use "sass:meta";
+@use 'sass:list';
+@use 'sass:map';
+@use 'sass:meta';
 @function color-map($name, $color-set: $colors) {
   $color-map: null;
 
