--- a/packages/components/frameworks/react-ssr/src/App.scss
+++ b/packages/components/frameworks/react-ssr/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   max-width: 700px;
   margin: 0 auto;
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Text', Verdana, sans-serif;
 }
 
 .components-examples {
@@ -16,11 +16,11 @@
 
 h1 {
   text-align: center;
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   margin: 40px 0px 48px;
 }
 h3 {
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   font-size: 22px;
   margin-bottom: 32px;
 }
