--- a/packages/components/frameworks/vue-test/src/App.scss
+++ b/packages/components/frameworks/vue-test/src/App.scss
@@ -6,7 +6,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #000;
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Text', Verdana, sans-serif;
 }
 .components-examples {
   max-width: 700px;
@@ -20,11 +20,11 @@
 
 h1 {
   text-align: center;
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   margin: 40px 0px 48px;
 }
 h3 {
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   font-size: 22px;
   margin-bottom: 32px;
 }
