--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.scss
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.scss
@@ -1,6 +1,6 @@
 body {
   color: #000;
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Text', Verdana, sans-serif;
 }
 .components-examples {
   max-width: 700px;
@@ -14,11 +14,11 @@ body {
 
 h1 {
   text-align: center;
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   margin: 40px 0px 48px;
 }
 h3 {
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   font-size: 22px;
   margin-bottom: 32px;
 }
