--- a/packages/components/frameworks/vue-test/src/App.scss
+++ b/packages/components/frameworks/vue-test/src/App.scss
@@ -6,23 +6,26 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #000;
-  margin-top: 24px;
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Text', Verdana, sans-serif;
 }
 .components-examples {
   max-width: 700px;
   width: 100%;
   margin: 0 auto;
 }
+.example-wrapper {
+  border-top: 1px solid #29d305;
+  padding: 32px 32px 72px;
+}
 
 h1 {
   text-align: center;
-  font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   margin: 40px 0px 48px;
 }
 h3 {
-  font-family: 'Red Hat Display';
-  font-size: 24px;
+  font-family: 'Red Hat Display', Verdana, sans-serif;
+  font-size: 22px;
   margin-bottom: 32px;
 }
 ul {
@@ -35,8 +38,4 @@ li {
 }
 a {
   color: #42b983;
-}
-.example-wrapper {
-  border-top: 1px solid #29d305;
-  padding: 32px 32px 72px;
 }
