--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6897,8 +6897,8 @@ input:focus {
 .e-toggle__input {
   position: relative;
   width: 32px;
-  height: 16px;
-  margin: 0 0 0 8px;
+  height: 0;
+  margin: -16px 0 0 8px;
   outline: none;
   cursor: pointer;
 }
