--- a/packages/elvis/percy/components/toggle.html
+++ b/packages/elvis/percy/components/toggle.html
@@ -9,72 +9,39 @@
   <body>
     <div class="e-title-sm e-mt-16">Toggle</div>
     <div class="e-title-xs e-my-16">States</div>
-    <div>
-      <div class="e-title-caps">Off</div>
-      <label class="e-toggle">
+    <label class="e-toggle" role="switch">
+      Off
+      <input class="e-toggle__input" type="checkbox" />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      On
+      <input class="e-toggle__input" type="checkbox" checked />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      Disabled off
+      <input class="e-toggle__input" type="checkbox" disabled />
+    </label>
+    <label class="e-toggle e-mt-16" role="switch">
+      Disabled on
+      <input class="e-toggle__input" type="checkbox" checked disabled />
+    </label>
+    <div class="e-bg-grey">
+      <label class="e-toggle e-toggle--inverted" role="switch">
+        Off
         <input class="e-toggle__input" type="checkbox" />
-        <span class="e-toggle__slider"></span>
       </label>
-    </div>
-    <div class="e-mt-16">
-      <div class="e-title-caps">On</div>
-      <label class="e-toggle">
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        On
         <input class="e-toggle__input" type="checkbox" checked />
-        <span class="e-toggle__slider"></span>
       </label>
-    </div>
-    <div class="e-mt-16">
-      <div class="e-title-caps">Disabled off</div>
-      <label class="e-toggle e-toggle---disabled">
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        Disabled off
         <input class="e-toggle__input" type="checkbox" disabled />
-        <span class="e-toggle__slider"></span>
       </label>
-    </div>
-    <div class="e-mt-16">
-      <div class="e-title-caps">Disabled on</div>
-      <label class="e-toggle e-toggle---disabled">
+      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+        Disabled on
         <input class="e-toggle__input" type="checkbox" checked disabled />
-        <span class="e-toggle__slider"></span>
       </label>
-    </div>
-    <div class="e-mt-16">
-      <div class="e-title-caps">Focus</div>
-      <label class="e-toggle e-toggle---focus">
-        <input class="e-toggle__input" type="checkbox" />
-        <span class="e-toggle__slider"></span>
-      </label>
-    </div>
-
-    <div class="e-title-xs e-my-16">Inverted</div>
-    <div style="background-color: #262626">
-      <div>
-        <div class="e-title-caps e-text-white">Off</div>
-        <label class="e-toggle e-toggle--inverted">
-          <input class="e-toggle__input" type="checkbox" />
-          <span class="e-toggle__slider"></span>
-        </label>
-      </div>
-      <div class="e-mt-16">
-        <div class="e-title-caps e-text-white">On</div>
-        <label class="e-toggle e-toggle--inverted">
-          <input class="e-toggle__input" type="checkbox" checked />
-          <span class="e-toggle__slider"></span>
-        </label>
-      </div>
-      <div class="e-mt-16">
-        <div class="e-title-caps e-text-white">Disabled off</div>
-        <label class="e-toggle e-toggle---disabled e-toggle--inverted">
-          <input class="e-toggle__input" type="checkbox" disabled />
-          <span class="e-toggle__slider"></span>
-        </label>
-      </div>
-      <div class="e-mt-16">
-        <div class="e-title-caps e-text-white">Disabled on</div>
-        <label class="e-toggle e-toggle---disabled e-toggle--inverted">
-          <input class="e-toggle__input" type="checkbox" checked disabled />
-          <span class="e-toggle__slider"></span>
-        </label>
-      </div>
     </div>
   </body>
 </html>
