--- a/packages/elvis/src/components/form/segmented-controls.scss
+++ b/packages/elvis/src/components/form/segmented-controls.scss
@@ -1,13 +1,13 @@
 @use '../../variables/colors';
-@use '../../variables/typography';
 @use '../../utilities/outline';
 @use '../../utilities/helpers';
 
 $control-count: 3;
 $transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 $transition-duration: 0.35s;
-$segmented-controls-height: 46px;
-$segmented-controls-height-sm: 38px;
+$segmented-controls-height-lg: 46px;
+$segmented-controls-height: 38px;
+$segmented-controls-height-sm: 30px;
 $segmented-controls-border: 1px solid colors.color('elvia-off');
 
 .e-segmented-controls {
@@ -100,11 +100,11 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
       align-items: center;
       height: 100%;
 
-      font-family: 'Red Hat Text', Verdana, sans-serif;
+      font-family: 'Red Hat Display', Verdana, sans-serif;
       font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 145%;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 22px;
     }
 
     &:before,
@@ -156,13 +156,20 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
     }
   }
 
+  &.e-segmented-controls--lg {
+    > label {
+      height: $segmented-controls-height-lg;
+
+      .e-segmented-controls__title {
+        font-size: 16px;
+      }
+    }
+  }
+
   &.e-segmented-controls--sm {
     > label {
       height: $segmented-controls-height-sm;
-
-      .e-segmented-controls__title {
-        @include typography.typography('text-sm');
-      }
+      width: 100%;
     }
   }
 }
