--- a/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
@@ -10,9 +10,9 @@
 <div class="page-body">
   <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
-    <label class="e-toggle">
+    <label class="e-toggle" role="switch">
+      Label
       <input class="e-toggle__input" type="checkbox" />
-      <span class="e-toggle__slider"></span>
     </label>
     <div class="e-w-100">
       <app-component-example-v1 [showPreview]="false" [codeHTML]="exampleOverview"></app-component-example-v1>
@@ -36,6 +36,13 @@
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
       <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
+
+      <app-component-subsection [sectionTitle]="'Use label'">
+        <ng-container ngProjectAs="sectionContent">
+          You should always have a label next to the toggle to tell the user what they are turning on/off. Use
+          the label in the component or add typography yourself.
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
