--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -22,11 +22,11 @@ $pageIndentedMargin: 72px;
 }
 
 .doc-page-description {
+  font-weight: 400;
   * {
     font-family: 'Red Hat Text', Verdana, sans-serif;
     font-size: 24px;
     line-height: 39px;
-    font-weight: 400;
     font-style: unset;
     letter-spacing: unset;
     text-transform: unset;
@@ -236,21 +236,24 @@ $pageIndentedMargin: 72px;
   .cms-image-inline {
     display: inline-flex;
     vertical-align: middle;
-    &.align-left {
+    &.align-left,
+    .align-left {
       padding-right: 32px;
       &.original-margin {
         padding: 0px;
         margin-right: 32px;
       }
     }
-    &.align-right {
+    &.align-right,
+    .align-right {
       padding-left: 32px;
       &.original-margin {
         padding: 0px;
         margin-left: 32px;
       }
     }
-    &.align-center {
+    &.align-center,
+    .align-center {
       padding-left: 32px;
       padding-right: 32px;
       &.original-margin {
@@ -258,6 +261,9 @@ $pageIndentedMargin: 72px;
         margin: 0 32px;
       }
     }
+  }
+  .containerDivNewLine {
+    clear: both;
   }
   .align-left {
     float: left;
@@ -316,6 +322,7 @@ $pageIndentedMargin: 72px;
 .cms-download-content {
   display: flex;
   flex-direction: column;
+
   .cms-display-image,
   .cms-display-image img {
     width: 100%;
