--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -658,10 +658,17 @@
             you are on the "content" tab.
             <ul class="e-list">
               <li>
+                <strong>Submenu</strong>
+                - Submenues are the main menu-items (about, brand, components, patterns, tools). If you are
+                adding new documentation pages you should also add the page to the submenu entry for that menu
+                in Contentful.
+              </li>
+              <li>
                 <strong>Documentation page</strong>
                 - The documentation pages should serve as the base for all content on a page. These pages can
                 be previewed with all content, even if that content also is just in draft. The page needs a
-                title, path and content and should usually also have a description.
+                title, path and content and should usually also have a description. When adding a new
+                documentation page
               </li>
               <li>
                 <strong>Image</strong>
