--- a/packages/elvis/src/components/form/segmented-controls.scss
+++ b/packages/elvis/src/components/form/segmented-controls.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 @use '../../variables/colors';
 @use '../../utilities/outline';
 @use '../../utilities/helpers';
@@ -77,7 +79,7 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
             &:before,
             & ~ label:after,
             & ~ label:before {
-              left: percentage((($i - 1) / 10) / ($j / 10));
+              left: percentage(math.div((($i - 1) * 0.1), ($j * 0.1)));
             }
           }
         }
@@ -148,7 +150,7 @@ $segmented-controls-border: 1px solid colors.color('elvia-off');
           &:before {
             display: flex;
             justify-content: center;
-            width: percentage(1 / $i);
+            width: percentage(math.div(1, $i));
             border-radius: 36px;
           }
         }
