center not-found content

--- a/packages/web/src/app/shell/main/main.component.scss
+++ b/packages/web/src/app/shell/main/main.component.scss
@@ -125,6 +125,8 @@
   }
 
   &.not-found {
+    display: flex;
+    justify-content: center;
     background-color: var(--e-grey-90);
     border-color: var(--e-grey-90);
   }
