fixed home page

--- a/packages/web/src/app/shell/main/main.component.html
+++ b/packages/web/src/app/shell/main/main.component.html
@@ -15,7 +15,7 @@
         [ngClass]="{
           'page-body': !isHomePage,
           'not-landing-page': !isLandingPage,
-          'overview-content': !isNotFound
+          'overview-content': !isHomePage && !isNotFound
         }"
       >
         <div class="feedback-link" *ngIf="!isLandingPage">
