--- a/packages/elvis/src/components/alert.scss
+++ b/packages/elvis/src/components/alert.scss
@@ -1,9 +1,9 @@
-@use "../variables/typography.scss";
-@use "../variables/colors";
-@use "../variables/shadows";
-@use "../utilities/icons.scss";
-@use "../utilities/breakpoints";
-@use "../utilities/helpers";
+@use '../variables/typography.scss';
+@use '../variables/colors';
+@use '../variables/shadows';
+@use '../utilities/icons.scss';
+@use '../utilities/breakpoints';
+@use '../utilities/helpers';
 
 $local-padding: 22px 30px 22px 22px; // -2px for border;
 $local-mobile-padding: 14px; // -2px for border;
@@ -306,22 +306,10 @@ $toast-max-width: 400px;
 
   // NO TITLE
   &.e-alert--no-title {
-    .e-alert__icon {
-      align-items: center;
-    }
-    &.e-alert--local {
-      .e-alert__icon {
-        margin-top: 0px;
-      }
-    }
     &.e-alert--global {
       @include breakpoints.breakpoint-up(Mobile) {
         padding: $global-mobile-notitle-padding;
       }
-    }
-    .e-alert__icon,
-    .e-alert__text {
-      margin-top: 0;
     }
   }
 
