--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
@@ -2,13 +2,14 @@
 
 <div class="components-examples">
   <div class="example-wrapper">
-    <!--Test the component here. When done add it to the list alphabetically-->
+    <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
       <elvia-tabs
         [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']"
         [value]="1"
+        [hasManualActivation]="true"
         (valueOnChange)="logValue('Tabs', $event.detail.value)"
       ></elvia-tabs>
     </div>
